WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149045
Web Inspector: WebInspectorUI does not need to be an API::Object
https://bugs.webkit.org/show_bug.cgi?id=149045
Summary
Web Inspector: WebInspectorUI does not need to be an API::Object
Joseph Pecoraro
Reported
2015-09-10 14:03:46 PDT
* SUMMARY WebInspectorUI does not need to be an API::Object. WebKit::WebInspector is API - WKInspectorRef WebKit::WebInspectorUI is not API, it is just internal to WebKit. Switching to just RefCounted works.
Attachments
[PATCH] Proposed Fix
(1.71 KB, patch)
2015-09-10 14:04 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-09-10 14:04:35 PDT
Created
attachment 260954
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2015-09-10 14:28:39 PDT
Comment on
attachment 260954
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 260954 Committed
r189592
: <
http://trac.webkit.org/changeset/189592
>
WebKit Commit Bot
Comment 3
2015-09-10 14:28:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug