Web Inspector: WebInspectorUI does not need to be an API::Object https://bugs.webkit.org/show_bug.cgi?id=149045

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-09-10
Reviewed by Timothy Hatcher.

* Shared/API/APIObject.h:
* WebProcess/WebPage/WebInspectorUI.h:

Canonical link: https://commits.webkit.org/167144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189592 268f45cc-cd09-0410-ab3c-d52691b4dbfc