Source/WebKit2/Shared/API/APIObject.h
@@ -165,7 +165,6 @@ public:
         BundleFrame,
         BundleHitTestResult,
         BundleInspector,
-        BundleInspectorUI,
         BundleNavigationAction,
         BundleNodeHandle,
         BundlePage,
